Convert integers to doubles at join points immediately after a chunk boundary, bug 719918. r=dvander